// communicators 멀티프로젝트 공통 설정
// 빌드 순서: common -> cluster-starter -> driver-starter -> io-db / io-kafka
// (모듈 간 project(...) 의존성으로 자동 보장)

subprojects {
    apply plugin: 'java-library'

    group = 'com.sds.communicators'
    version = '3.8'

    java {
        sourceCompatibility = JavaVersion.VERSION_21
        targetCompatibility = JavaVersion.VERSION_21
    }

    repositories {
        mavenCentral()
    }

    tasks.withType(JavaCompile).configureEach {
        options.encoding = 'UTF-8'
    }

    tasks.withType(Javadoc).configureEach {
        options.encoding = 'UTF-8'
    }

    dependencies {
        compileOnly 'org.projectlombok:lombok:1.18.46'
        annotationProcessor 'org.projectlombok:lombok:1.18.46'
        testCompileOnly 'org.projectlombok:lombok:1.18.46'
        testAnnotationProcessor 'org.projectlombok:lombok:1.18.46'
    }
}
